<resources>
    <string name="app_name">AniRec Home</string>
    <string name="login_header">Login</string>
    <string name="register_header">Register Account</string>
    <string name="register_already_complete">Already made an account?</string>
    <string name="register_not_complete">Don\'t have an account?</string>
    <string name="input_userName">Name</string>
    <string name="input_userId">Student ID</string>
    <string name="input_userEmail">Email</string>
    <string name="input_userPassword">Password</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="home_subtitle">Choose or capture image to upload</string>

    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Profile_page">Profile</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_edit">Edit Profile</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_logout">Log Out</string>

    <string name="button_gallery">My Gallery</string>
    <string name="button_stats">Statistics</string>
    <string name="button_profile">Profile Page</string>
    <string name="button_classify">My Studio</string>

    <string name="home_second">Home Second</string>
    <string name="myButtonName">Gallery</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="input_profession">Profession</string>
    <string name="button_profilePicture">Upload Profile Picture</string>
    <string name="button_logout">Logout</string>
    <string name="button_about">About</string>
    <string name="button_goHome">Return Home</string>
    <string name="hint_profilePicture">Profile Picture</string>
    <string name="button_update">Apply Changes</string>
    <string name="button_resetPassword">Reset Password</string>
    <string name="header_changeProfilePicture">Tap to change profile picture</string>

    <string name="header_gallery">Recognition Studio</string>
    <string name="button_go">Go</string>
    <string name="button_yes">Correct</string>
    <string name="button_no">Incorrect</string>
    <string name="button_camera">Take Picture</string>
    <string name="button_upload">Upload Picture</string>
    <string name="button_back">Go Back</string>

    <string name="header_about">About AniRec</string>
    <string name="about_text">AniRec (Animal Recognition) will allow users to upload pictures of animals that can be fed into the machine learning model for classification. These results, as well as the images themselves, will be stored in a database that can be accessed from the user’s account or by the system administrator. Statistics relating to the network\'s performance will be recorded and displayed to the users as well.</string>

    <string name="header_stats">Statistics</string>
    <string name="button_page">Model Info</string>

</resources>
