<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_generic"
    android:orientation="vertical"
    tools:context=".ActivityRegister">

    <TextView
        android:id="@+id/registrationHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/segoeui_semibold"
        android:text="@string/register_header"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/entryUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="50dp"
        android:fontFamily="@font/segoeui_semibold"
        android:hint="@string/input_userName"
        android:autofillHints="@string/input_userName"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/entryUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="50dp"
        android:fontFamily="@font/segoeui_semibold"
        android:hint="@string/input_userEmail"
        android:autofillHints="@string/input_userEmail"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/entryUserId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="50dp"
        android:fontFamily="@font/segoeui_semibold"
        android:hint="@string/input_userId"
        android:autofillHints="@string/input_userId"
        android:inputType="numberSigned"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/entryUserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="50dp"
        android:fontFamily="@font/segoeui_semibold"
        android:hint="@string/input_userPassword"
        android:autofillHints="@string/input_userPassword"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="100dp"
        android:layout_gravity="center"
        android:background="@drawable/button_action"
        android:fontFamily="@font/segoeui_semibold"
        android:stateListAnimator="@null"
        android:text="@string/register_button"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/alreadyHaveAccountHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:fontFamily="@font/segoeui_semibold"
            android:text="@string/register_already_complete"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoeui_semibold"
            android:gravity="center_horizontal"
            android:text="@string/login_button"
            android:textColor="@color/OLIVE_GREEN"
            android:textSize="21sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/buttonForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/segoeui_semibold"
        android:gravity="center_horizontal"
        android:text="@string/forgot_password"
        android:textColor="@color/OLIVE_GREEN"
        android:textSize="21sp" />

</LinearLayout>