<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_generic"
    android:orientation="vertical"
    tools:context=".ActivityStudio">

    <TextView
        android:id="@+id/emailHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="54dp"
        android:fontFamily="@font/segoeui_semibold"
        android:text="@string/header_gallery"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <Button
        android:id="@+id/buttonGo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="150dp"
        android:text="@string/button_go"
        android:fontFamily="@font/segoeui_semibold"
        android:background="@drawable/button_secondary"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/buttonCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="15dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/button_action"
            android:fontFamily="@font/segoeui_semibold"
            android:stateListAnimator="@null"
            android:text="@string/button_camera"
            android:textAlignment="gravity"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="15dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/button_action"
            android:fontFamily="@font/segoeui_semibold"
            android:stateListAnimator="@null"
            android:text="@string/button_upload"
            android:textAlignment="gravity"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:padding="15dp"
        android:background="@drawable/button_secondary"
        android:fontFamily="@font/segoeui_semibold"
        android:stateListAnimator="@null"
        android:text="@string/button_goHome"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</LinearLayout>