<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_generic"
    android:orientation="vertical"
    tools:context=".ActivityAbout">

    <TextView
        android:id="@+id/aboutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/segoeui_semibold"
        android:text="@string/header_about"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/aboutText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/segoeui_semibold"
        android:text="@string/about_text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:padding="15dp"
        android:background="@drawable/button_secondary"
        android:fontFamily="@font/segoeui_semibold"
        android:stateListAnimator="@null"
        android:text="@string/button_back"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</LinearLayout>
